--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "com.videojames.scriptable-fsm",
+  "name": "com.video-james.scriptable-fsm",
   "version": "1.0.0",
   "displayName": "Scriptable FSM",
-  "description": "This package provides a framework to create and FSM using scriptable objects. It also requires the use of Odin inspector."
+  "description": "This package provides a framework for creating an FSM using scriptable objects. It also requires the use of Odin inspector."
 }
